--- a/tuned.conf
+++ b/tuned.conf
@@ -4,24 +4,36 @@
 
 [main]
 # Interval for monitoring and tuning. Default is 10s.
-interval=10
+# interval=10
 
 #
 # Disk monitoring section
 #
 [DiskMonitor]
+# Enabled or disable the plugin. Default is True. Any other value
+# disables it.
+# enabled=False
 
 #
 # Disk tuning section
 #
 [DiskTuning]
+# Enabled or disable the plugin. Default is True. Any other value
+# disables it.
+# enabled=False
 
 #
 # Net monitoring section
 #
 [NetMonitor]
+# Enabled or disable the plugin. Default is True. Any other value
+# disables it.
+# enabled=False
 
 #
 # Net tuning section
 #
 [NetTuning]
+# Enabled or disable the plugin. Default is True. Any other value
+# disables it.
+# enabled=False
