- Added CPU monitoring and tuning plugins - Small fixes to tuned specfile, add varnetload properly

--- a/tuned.conf
+++ b/tuned.conf
@@ -21,6 +21,8 @@
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
+# hdparm=False
+# alpm=False
 
 #
 # Net monitoring section
@@ -34,6 +36,22 @@
 # Net tuning section
 #
 [NetTuning]
+# Enabled or disable the plugin. Default is True. Any other value
+# disables it.
+# enabled=False
+
+#
+# CPU monitoring section
+#
+[CPUMonitor]
+# Enabled or disable the plugin. Default is True. Any other value
+# disables it.
+# enabled=False
+
+#
+# CPU tuning section
+#
+[CPUTuning]
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
