tuned creates and cleans pidfile from config file

--- a/tuned.conf
+++ b/tuned.conf
@@ -5,6 +5,7 @@
 [main]
 # Interval for monitoring and tuning. Default is 10s.
 # interval=10
+# pidfile=/var/run/tuned.pid
 
 #
 # Disk monitoring section
