Verbose mode for main part of for separate plugins.

--- a/tuned.conf
+++ b/tuned.conf
@@ -6,6 +6,7 @@
 # Interval for monitoring and tuning. Default is 10s.
 # interval=10
 # pidfile=/var/run/tuned.pid
+# verbose=False
 
 #
 # Disk monitoring section
@@ -14,7 +15,7 @@
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
-
+# verbose=True
 #
 # Disk tuning section
 #
@@ -24,7 +25,7 @@
 # enabled=False
 # hdparm=False
 # alpm=False
-
+# verbose=True
 #
 # Net monitoring section
 #
