tuned.conf: added new logging directives and description

--- a/tuned.conf
+++ b/tuned.conf
@@ -2,11 +2,30 @@
 # tuned configuration main service
 #
 
+#
+# LOGGING CONFIGURATION
+#
+# You can set logging levels separately for each module using 'logging'
+# directive. Possible values are: critical, error, warning, info, debug
+#
+#   example: logging=info
+#            will log all messages with 'info' priority and higher
+#
+# If you don't specify 'logging' in module configuration, value from [main] is
+# used, if the value is not set there either, default ('info') value is used.
+#
+# Another control of logging is provided by 'logging_disable' directive, which
+# can be used only in [main] section. It supresses all messages with specified
+# or lower priority. If you don't want use this option, comment it out or set
+# the directive to 'notset' value.
+#
+
 [main]
 # Interval for monitoring and tuning. Default is 10s.
 # interval=10
 # pidfile=/var/run/tuned.pid
-# verbose=False
+logging=info
+logging_disable=notset
 
 #
 # Disk monitoring section
@@ -15,7 +34,8 @@
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
-# verbose=True
+# logging=debug
+
 #
 # Disk tuning section
 #
@@ -25,7 +45,8 @@
 # enabled=False
 # hdparm=False
 # alpm=False
-# verbose=True
+# logging=debug
+
 #
 # Net monitoring section
 #
@@ -33,6 +54,7 @@
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
+# logging=debug
 
 #
 # Net tuning section
@@ -41,6 +63,7 @@
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
+# logging=debug
 
 #
 # CPU monitoring section
@@ -49,6 +72,7 @@
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
+# logging=debug
 
 #
 # CPU tuning section
@@ -57,3 +81,4 @@
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
 # enabled=False
+# logging=debug
