- Large update to documentation and manpages - Updated several of the profiles

--- a/tune-profiles/desktop-powersave/tuned.conf
+++ b/tune-profiles/desktop-powersave/tuned.conf
@@ -38,7 +38,7 @@
 [NetTuning]
 # Enabled or disable the plugin. Default is True. Any other value
 # disables it.
-enabled=False
+# enabled=False
 
 #
 # CPU monitoring section
