tuned: pid file moved to /var/run/tuned/tuned.pid
This is being done to comply with SELinux policy.
/var/run/tuned/ is intended to be a new home of any runtime files
created by tuned itself or tuned plugins.

--- a/tuned.conf
+++ b/tuned.conf
@@ -23,7 +23,7 @@
 [main]
 # Interval for monitoring and tuning. Default is 10s.
 # interval=10
-# pidfile=/var/run/tuned.pid
+# pidfile=/var/run/tuned/tuned.pid
 logging=info
 logging_disable=notset
 
