--- a/test.cfg
+++ b/test.cfg
@@ -3,7 +3,9 @@ include=included.cfg
 script=script.sh
 elevator=deadline
 
-[sysctl]
+[my_sysctl]
+merge=1
+type=sysctl
 # ktune sysctl settings for EL 5 servers
 
 # 256 KB default performs well experimentally, and is often recommended by ISVs.
