--- a/test.cfg
+++ b/test.cfg
@@ -57,6 +57,10 @@ vm.dirty_ratio = 50
 # Doesn't exist for 2.6.30++ anymore
 # vm.pagecache = 90
 
+[my_ktune_plugin]
+type=ktune
+script=test.sh
+elevator=deadline
 
 [my_cpu_plugin]
 type=cpu
