Hopefully working net plugin

--- a/included.cfg
+++ b/included.cfg
@@ -6,8 +6,8 @@ type=sysctl
 net.core.rmem_max = 8388609
 replace=1
 
-[my_included_plugin]
-type=test
+#[my_included_plugin]
+#type=test
 
 [my_net_plugin]
 type=net
