--- a/test.cfg
+++ b/test.cfg
@@ -61,18 +61,18 @@ vm.dirty_ratio = 50
 type=ktune
 script=test.sh
 elevator=deadline
-
+#
 [my_cpu_plugin]
-type=cpu
+#type=cpu
 
-[my_test_plugin]
-type=test
-merge=1
+#[my_test_plugin]
+#type=test
+#merge=1
 
-[my_broken_plugin]
-type=broken
+#[my_broken_plugin]
+#type=broken
 
-[my_disk_plugin]
-type=disk
+#[my_disk_plugin]
+#type=disk
 
 
