Elevators are now part of plugin_disk

--- a/test.cfg
+++ b/test.cfg
@@ -72,7 +72,8 @@ elevator=deadline
 #[my_broken_plugin]
 #type=broken
 
-#[my_disk_plugin]
-#type=disk
+[my_disk_plugin]
+type=disk
+elevator=deadline
 
 
