Some testing profiles

--- a/profiles/profil/tuned.cfg
+++ b/profiles/profil/tuned.cfg
@@ -1,7 +1,5 @@
 [main]
-include=included.cfg
-script=script.sh
-elevator=deadline
+include=included
 
 [my_sysctl]
 replace=1
@@ -56,24 +54,4 @@ vm.dirty_ratio = 50
 # swap.
 # Doesn't exist for 2.6.30++ anymore
 # vm.pagecache = 90
-
-[my_ktune_plugin]
-type=ktune
-script=test.sh
-elevator=deadline
-#
-[my_cpu_plugin]
-#type=cpu
-
-#[my_test_plugin]
-#type=test
-#merge=1
-
-#[my_broken_plugin]
-#type=broken
-
-[my_disk_plugin]
-type=disk
-elevator=deadline
-
 
