functions removal: ported some profiles (not all)

--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -3,10 +3,15 @@
 #
 
 [cpu]
+governor=ondemand
+
+[audio]
+ac97_powersave=true
+hda_intel_powersave=10
+
+[video]
+radeon_powersave=auto
 
 [disk]
 # Comma separated list of devices, all devices if commented out.
 # devices=sda
-
-[script]
-script=script.sh
