--- a/profiles/desktop-powersave/tuned.conf
+++ b/profiles/desktop-powersave/tuned.conf
@@ -5,9 +5,9 @@
 [main]
 include=server-powersave
 
+[video]
+radeon_powersave=auto
+
 [net]
 # Comma separated list of devices, all devices if commented out.
 # devices=eth0
-
-[script]
-script=script.sh
