--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -3,12 +3,22 @@
 #
 
 [cpu]
+governor=ondemand
+multicore_powersave=1
 
 [eeepc_she]
+
+[audio]
+ac97_powersave=true
+hda_intel_powersave=10
+
+[video]
+radeon_powersave=auto
 
 [disk]
 # Comma separated list of devices, all devices if commented out.
 # devices=sda
+alpm=min_power
 
 [net]
 # Comma separated list of devices, all devices if commented out.
