--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -2,6 +2,9 @@
 # tuned configuration
 #
 
+[cpu]
+governor=performance
+
 [sysctl]
 # ktune sysctl settings for rhel6 servers, maximizing i/o throughput
 #
