--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -5,6 +5,9 @@
 [main]
 include=throughput-performance
 
+[cpu]
+governor=performance
+
 [sysctl]
 # Filesystem I/O is usually much more efficient than swapping, so try to keep
 # swapping low.  It's usually safe to go even lower than this on systems with
