profiles: converted some more options from scripts to tuned.conf

--- a/profiles/latency-performance/tuned.conf
+++ b/profiles/latency-performance/tuned.conf
@@ -6,5 +6,7 @@
 force_latency=0
 governor=performance
 
-[script]
-script=script.sh
+# devices sd*,cciss*,dm-*,vd*
+[disk]
+devices=sd*,cciss*,dm-*,vd*
+elevator=deadline
