--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -5,6 +5,14 @@
 [cpu]
 governor=performance
 
+[vm]
+transparent_hugepages=always
+
+# devices sd*,cciss*,dm-*,vd*
+[disk]
+devices=sd*,cciss*,dm-*,vd*
+elevator=deadline
+
 [sysctl]
 # ktune sysctl settings for rhel6 servers, maximizing i/o throughput
 #
@@ -42,5 +50,3 @@ vm.dirty_ratio = 40
 # 65536, for 4096 cpus, 4194304 (which is the upper limit possible).
 #kernel.pid_max = 65536
 
-[script]
-script=script.sh
