--- a/profiles/spindown-disk/tuned.conf
+++ b/profiles/spindown-disk/tuned.conf
@@ -16,6 +16,11 @@
 # Bluetooth will be switch off.
 # Wifi will be switch into power safe mode.
 
+[disk]
+alpm=medium_power
+apm=128
+spindown=6
+
 [sysctl]
 vm.dirty_writeback_centisecs=6000
 vm.dirty_expire_centisecs=9000
