--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -8,6 +8,12 @@ include=throughput-performance
 [cpu]
 governor=performance
 
+[vm]
+transparent_hugepages=always
+
+[disk]
+readahead_multiply=4
+
 [sysctl]
 # Filesystem I/O is usually much more efficient than swapping, so try to keep
 # swapping low.  It's usually safe to go even lower than this on systems with
