--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -13,6 +13,11 @@ transparent_hugepages=always
 devices=sd*,cciss*,dm-*,vd*
 elevator=deadline
 
+# Disable barriers on non root and boot mounts
+[mounts]
+devices=!/,!/boot
+disable_barriers=true
+
 [sysctl]
 # ktune sysctl settings for rhel6 servers, maximizing i/o throughput
 #
