latency-performance: disabled THP
resolves: rhbz#887355

--- a/profiles/latency-performance/tuned.conf
+++ b/profiles/latency-performance/tuned.conf
@@ -6,6 +6,9 @@
 force_latency=0
 governor=performance
 
+[vm]
+transparent_hugepages=never
+
 # devices sd*,cciss*,dm-*,vd*
 [disk]
 devices=sd*,cciss*,dm-*,vd*
