--- a/profiles/virtual-guest/tuned.conf
+++ b/profiles/virtual-guest/tuned.conf
@@ -8,6 +8,11 @@ include=throughput-performance
 [disk]
 readahead_multiply=4
 
+# Don't disable barriers (risk of data loss)
+[mounts]
+devices=!/,!/boot
+disable_barriers=false
+
 [sysctl]
 # Filesystem I/O is usually much more efficient than swapping, so try to keep
 # swapping low.  It's usually safe to go even lower than this on systems with
