--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -25,3 +25,8 @@ vm.dirty_ratio = 10
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
 vm.dirty_background_ratio = 5
+
+# The total time the scheduler will consider a migrated process
+# "cache hot" and thus less likely to be re-migrated
+# (system default is 500000, i.e. 0.5 ms)
+kernel.sched_migration_cost = 5000000
