throughput-performance: added readahead_multiply=4
Also removed this settings from the dependant profiles
where it is no more needed and updated the manual page.

Resolves: rhbz#987570

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -12,6 +12,7 @@ transparent_hugepages=always
 [disk]
 devices=sd*,cciss*,dm-*,vd*
 elevator=deadline
+readahead_multiply=4
 
 # Disable barriers on non root and boot mounts
 [mounts]
