tuned: added global option update_interval
It allows setting update interval for dynamic tuning in global config.
By default it is 10 seconds.

fixes #6

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/tuned-main.conf
+++ b/tuned-main.conf
@@ -2,3 +2,6 @@
 
 # Dynamicaly tune devices, if disabled only static tuning will be used.
 dynamic_tuning = 1
+
+# Update interval for dynamic tunings (in seconds).
+update_interval = 10
