profiles: switched from multiplies to hardcoded values
Related: rhbz#922068

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -14,7 +14,7 @@ transparent_hugepages=always
 [disk]
 devices=sd*,cciss*,dm-*,vd*
 elevator=deadline
-readahead_multiply=4
+readahead=4096
 
 [sysctl]
 # ktune sysctl settings for rhel6 servers, maximizing i/o throughput
