--- a/profiles/virtual-host/tuned.conf
+++ b/profiles/virtual-host/tuned.conf
@@ -26,4 +26,4 @@ vm.dirty_background_ratio = 5
 # The total time the scheduler will consider a migrated process
 # "cache hot" and thus less likely to be re-migrated
 # (system default is 500000, i.e. 0.5 ms)
-kernel.sched_migration_cost = 5000000
+kernel.sched_migration_cost_ns = 5000000
