--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -10,10 +10,7 @@ min_perf_pct=100
 [vm]
 transparent_hugepages=always
 
-# devices sd*,cciss*,dm-*,vd*
 [disk]
-devices=sd*,cciss*,dm-*,vd*
-elevator=deadline
 readahead=4096
 
 [sysctl]
@@ -38,11 +35,11 @@ kernel.sched_wakeup_granularity_ns = 15000000
 #
 # The generator of dirty data starts writeback at this percentage (system default
 # is 20%)
-vm.dirty_ratio = 40
+vm.dirty_ratio = 10
 
 # Start background writeback (via writeback threads) at this percentage (system
 # default is 10%)
-#vm.dirty_background_ratio = 15
+vm.dirty_background_ratio = 3
 
 # PID allocation wrap value.  When the kernel's next PID value
 # reaches this value, it wraps back to a minimum PID value.
@@ -53,3 +50,10 @@ vm.dirty_ratio = 40
 # 65536, for 4096 cpus, 4194304 (which is the upper limit possible).
 #kernel.pid_max = 65536
 
+# The swappiness parameter controls the tendency of the kernel to move
+# processes out of physical memory and onto the swap disk.
+# 0 tells the kernel to avoid swapping processes out of physical memory
+# for as long as possible
+# 100 tells the kernel to aggressively swap processes out of physical memory
+# and move them to swap cache
+vm.swappiness=10
