tuned: preset the sleep_interval in the tuned-main.conf
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/tuned-main.conf
+++ b/tuned-main.conf
@@ -3,5 +3,10 @@
 # Dynamicaly tune devices, if disabled only static tuning will be used.
 dynamic_tuning = 1
 
+# how long to sleep before checking for events (in seconds)
+# higher number means lower overhead but longer response time
+sleep_interval = 1
+
 # Update interval for dynamic tunings (in seconds).
+# It must be multiply of the sleep_interval
 update_interval = 10
