recommend: fixed config file
Resolves: rhbz#1069123

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/recommend.conf
+++ b/recommend.conf
@@ -9,11 +9,7 @@
 
 [throughput-performance]
 virt=
-system=.*computenode.*
-
-[throughput-performance]
-virt=
-system=.*server.*
+system=.*(computenode|server).*
 
 [virtual-guest]
 virt=.+
