plugins: added atomic-host and atomic-guest profiles
Resolves: rhbz#1091977
Resolves: rhbz#1091979

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/recommend.conf
+++ b/recommend.conf
@@ -7,6 +7,14 @@
 # If 'virt' or 'system' is empty, i.e. 'virt=', it matches only empty string (alias for '^$').
 # If several profiles matched, the first match is taken.
 
+[atomic-host]
+virt=
+system=.*atomic.*
+
+[atomic-guest]
+virt=.+
+system=.*atomic.*
+
 [throughput-performance]
 virt=
 system=.*(computenode|server).*
