recommend: add global config option to disable 'recommend' functionality
On some platforms the 'recommend' functionality doens't make sense
as there is only one product variant. On such platforms the recommend
functionality can be disabled by adding/changing the following in
the global config (/etc/tuned/tuned-main.conf):

recommend_command = 0

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/tuned-main.conf
+++ b/tuned-main.conf
@@ -10,3 +10,8 @@ sleep_interval = 1
 # Update interval for dynamic tunings (in seconds).
 # It must be multiply of the sleep_interval
 update_interval = 10
+
+# Recommend functionality, if disabled "recommend" command will be not
+# available in CLI, daemon will not parse recommend.conf but will return
+# one hardcoded profile (by default "balanced")
+recommend_command = 1
