recommend: added generic file check
Example of recommend.conf content:

[powersave]
/etc/machine.conf=.*laptop.*

This will recommend powersave profile if there is /etc/machine.conf containing
string 'laptop'. The check will not match if the file doesn't exist.

To just check for file existence:

[powersave]
/etc/machine.conf=.*

This will match if there is /etc/machine.conf file.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/recommend.conf
+++ b/recommend.conf
@@ -2,7 +2,11 @@
 #
 # The 'virt' RE matches virt-what output.
 # The 'system' RE matches /etc/system-release-cpe.
-# Both 'virt' and 'system' needs to match for profile to match.
+# If starting with / it means path to file which content needs to match RE, 
+# e.g. '/etc/passwd=.+'
+# If file not exists, no RE will match.
+#
+# Al 'virt', 'system' and files needs to match for profile to match.
 # If 'virt' or 'system' is not specified, it matches for every string.
 # If 'virt' or 'system' is empty, i.e. 'virt=', it matches only empty string (alias for '^$').
 # If several profiles matched, the first match is taken.
