--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -8,9 +8,10 @@ include = network-latency
 
 [variables]
 # User is responsible for updating variables.conf with variable content such as isolated_cores=X-Y 
-include = variables.conf
+include = /etc/tuned/realtime-variables.conf
 # Non-isolated cores including offline cores
 isolated_cores_complement_all = ${f:cpulist_invert:${isolated_cores}}
+not_isolated_cpumask = ${f:cpulist2hex:${isolated_cores_complement_all}}
 # Non-isolated cores which are online
 isolated_cores_complement = ${f:cpulist_online:${isolated_cores_complement_all}}
 
