--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -9,11 +9,8 @@ include = network-latency
 [variables]
 # User is responsible for updating variables.conf with variable content such as isolated_cores=X-Y 
 include = /etc/tuned/realtime-variables.conf
-# Non-isolated cores including offline cores
-isolated_cores_complement_all = ${f:cpulist_invert:${isolated_cores}}
-not_isolated_cpumask = ${f:cpulist2hex:${isolated_cores_complement_all}}
-# Non-isolated cores which are online
-isolated_cores_complement = ${f:cpulist_online:${isolated_cores_complement_all}}
+# Non-isolated cores cpumask including offline cores
+not_isolated_cpumask = ${f:cpulist2hex_invert:${isolated_cores}}
 
 [sysctl]
 kernel.hung_task_timeout_secs = 600
