systemd: requested tuned.service start after systemd-sysctl.service
Resolves: rhbz#1189263

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/tuned.service
+++ b/tuned.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Dynamic System Tuning Daemon
-After=syslog.target
+After=syslog.target systemd-sysctl.service
 Conflicts=cpupower.service
 
 [Service]
