systemd: workaround for systemd/initscripts bug rhbz#1235768 related to sysctl
The rhbz#1235768 is can't fix, but using:
After=network.target

should fix the ordering of services, so sysctl is no more rewritten by systemd.

Related: rhbz#1189263

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/tuned.service
+++ b/tuned.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Dynamic System Tuning Daemon
-After=syslog.target systemd-sysctl.service
+After=syslog.target systemd-sysctl.service network.target
 Conflicts=cpupower.service
 
 [Service]
