tuned: added one-shot no daemon mode
Most of the functionality don' work in this mode, it just
applies the settings, no rollback possible.

Disable daemon by setting 'daemon = 0' in /etc/tuned/tuned-main.conf

This settings can be overridden if running tuned with '-d' command line
option. In such case daemon mode will be used.

Resolves: rhbz#1068663

Also fixed interpretation of booleans in main config.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/tuned-main.conf
+++ b/tuned-main.conf
@@ -1,17 +1,23 @@
 # Global tuned configuration file.
 
+# Whether to use daemon. Without daemon it just applies tuning. It is
+# not recommended, because many functions don't work without daemon,
+# e.g. there will be no D-Bus, no rollback of settings, no hotplug,
+# no dynamic tuning, ...
+daemon = 1
+
 # Dynamicaly tune devices, if disabled only static tuning will be used.
 dynamic_tuning = 1
 
-# how long to sleep before checking for events (in seconds)
-# higher number means lower overhead but longer response time
+# How long to sleep before checking for events (in seconds)
+# higher number means lower overhead but longer response time.
 sleep_interval = 1
 
 # Update interval for dynamic tunings (in seconds).
-# It must be multiply of the sleep_interval
+# It must be multiply of the sleep_interval.
 update_interval = 10
 
 # Recommend functionality, if disabled "recommend" command will be not
 # available in CLI, daemon will not parse recommend.conf but will return
-# one hardcoded profile (by default "balanced")
+# one hardcoded profile (by default "balanced").
 recommend_command = 1
