recommend: profile can be specified multiple times by using suffix
It needs to use unique ',ANYSTRING' suffix, everything after the last ','
will be stripped by the parser, e.g.:

[balanced,1]
/FILE1=RE1

[balanced,2]
/FILE2=RE2

This will set 'balanced' profile in case there is FILE1 matching RE1 or
FILE2 matching RE2 or both. There is no need to use the suffix
if the profile is specified only once.

Also improved description in the recommend.conf.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/recommend.conf
+++ b/recommend.conf
@@ -1,15 +1,34 @@
 # Tuned rules for recommend_profile.
 #
 # The 'virt' RE matches virt-what output.
-# The 'system' RE matches /etc/system-release-cpe.
-# If starting with / it means path to file which content needs to match RE, 
-# e.g. '/etc/passwd=.+'
-# If file not exists, no RE will match.
+# The 'system' RE matches content of /etc/system-release-cpe.
 #
-# Al 'virt', 'system' and files needs to match for profile to match.
+# If the parameter starts with '/' it means path to file which content is
+# checked, e.g.:
+# /etc/passwd=.+
+# If file doesn't exist, its RE will not match.
+#
+# Al 'virt', 'system' and files have to match for profile to match.
 # If 'virt' or 'system' is not specified, it matches for every string.
 # If 'virt' or 'system' is empty, i.e. 'virt=', it matches only empty string (alias for '^$').
 # If several profiles matched, the first match is taken.
+#
+# Limitation:
+# Each profile can be specified only once, because there cannot be
+# multiple sections in the configuration file with the same name
+# (ConfigObj limitation).
+# If there is a need to specify the profile multiple times, unique
+# suffix like ',ANYSTRING' can be used. Everything after the last ','
+# is stripped by the parser, e.g.:
+#
+# [balanced,1]
+# /FILE1=RE1
+#
+# [balanced,2]
+# /FILE2=RE2
+#
+# This will set 'balanced' profile in case there is FILE1 matching RE1 or
+# FILE2 matching RE2 or both.
 
 [atomic-host]
 virt=
