plugins: added scsi_host plugin
This plugin handles SCSI hosts. On Linux these are also used for SATA.
Currently it only supports ALPM setting, e.g.:

[scsi_host]
devices=host0
alpm=medium_power

ALPM is set per SATA/SCSI host. If SCSI host doesn't support ALPM
(it is SATA/AHCI specific), it is skipped and message is logged into
Tuned log with 'info' loglevel.

Concurrently the ALPM settings were removed from the 'disk' plugin.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/balanced/tuned.conf
+++ b/profiles/balanced/tuned.conf
@@ -15,4 +15,6 @@ radeon_powersave=auto
 [disk]
 # Comma separated list of devices, all devices if commented out.
 # devices=sda
+
+[scsi_host]
 alpm=medium_power
