--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -19,11 +19,13 @@ radeon_powersave=auto
 [disk]
 # Comma separated list of devices, all devices if commented out.
 # devices=sda
-alpm=min_power
 
 [net]
 # Comma separated list of devices, all devices if commented out.
 # devices=eth0
+
+[scsi_host]
+alpm=min_power
 
 [sysctl]
 vm.laptop_mode=5
