--- a/profiles/spindown-disk/tuned.conf
+++ b/profiles/spindown-disk/tuned.conf
@@ -17,9 +17,11 @@
 # Wifi will be switch into power safe mode.
 
 [disk]
-alpm=medium_power
 apm=128
 spindown=6
+
+[scsi_host]
+alpm=medium_power
 
 [sysctl]
 vm.dirty_writeback_centisecs=6000
