--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -28,7 +28,7 @@ vm.stat_interval = 10
 # NUMA node0 CPU(s):     0,2,4,6,8,10,12,14,16,18,20,22
 # NUMA node1 CPU(s):     1,3,5,7,9,11,13,15,17,19,21,23
 
-cmdline=isolcpus=${isolated_cores} nohz_full=${isolated_cores} intel_pstate=disable nosoftlockup
+cmdline=isolcpus=${isolated_cores} intel_pstate=disable nosoftlockup
 
 [script]
 script = script.sh
