profiles: Added nohz_full and nohz=on to realtime guest/host profiles
Resolves: rhbz#1274445

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -12,3 +12,6 @@ isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 
 [script]
 script=script.sh
+
+[bootloader]
+cmdline=isolcpus=${isolated_cores} nohz=on nohz_full=${isolated_cores} intel_pstate=disable nosoftlockup
