--- a/profiles/enterprise-storage/tuned.conf
+++ b/profiles/enterprise-storage/tuned.conf
@@ -3,4 +3,5 @@
 #
 
 [main]
+summary=Legacy profile for RHEL6.  For RHEL7, please use throughput-performance profile.
 include=throughput-performance
