--- a/profiles/network-latency/tuned.conf
+++ b/profiles/network-latency/tuned.conf
@@ -3,6 +3,7 @@
 #
 
 [main]
+summary=Optimize for deterministic performance at the cost of increased power consumption, focused on low latency network performance
 include=latency-performance
 
 [vm]
