--- a/profiles/spindown-disk/tuned.conf
+++ b/profiles/spindown-disk/tuned.conf
@@ -16,6 +16,9 @@
 # Bluetooth will be switch off.
 # Wifi will be switch into power safe mode.
 
+[main]
+summary=Optimize for power saving by spinning-down rotational disks
+
 [disk]
 apm=128
 spindown=6
