--- a/profiles/throughput-performance/tuned.conf
+++ b/profiles/throughput-performance/tuned.conf
@@ -2,6 +2,9 @@
 # tuned configuration
 #
 
+[main]
+summary=Broadly applicable tuning that provides excellent performance across a variety of common server workloads.  This is the default profile for RHEL7.
+
 [cpu]
 governor=performance
 energy_perf_bias=performance
