--- a/profiles/latency-performance/tuned.conf
+++ b/profiles/latency-performance/tuned.conf
@@ -2,6 +2,9 @@
 # tuned configuration
 #
 
+[main]
+summary=Optimize for deterministic performance at the cost of increased power consumption
+
 [cpu]
 force_latency=1
 governor=performance
