--- a/profiles/powersave/tuned.conf
+++ b/profiles/powersave/tuned.conf
@@ -2,6 +2,9 @@
 # tuned configuration
 #
 
+[main]
+summary=Optimize for low power consumption
+
 [cpu]
 governor=ondemand
 energy_perf_bias=powersave
