--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -18,6 +18,7 @@ kernel.hung_task_timeout_secs = 600
 kernel.nmi_watchdog = 0
 kernel.sched_rt_runtime_us = 1000000
 vm.stat_interval = 10
+kernel.timer_migration = 0
 
 [sysfs]
 /sys/bus/workqueue/devices/writeback/cpumask = ${not_isolated_cpumask}
