Implemented polkit authorization
Dropped dbus at_console policy and implemented polkit authorization.
By the default policy the query actions are allowed for all users, actions
which do modification to the system settings or Tuned state are by default
allowed only for active users that have console, others need admin
authorization.

Resolves: rhbz#1095142

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/dbus.conf
+++ b/dbus.conf
@@ -4,18 +4,13 @@
 
 <busconfig>
 	<policy context="default">
-		<deny send_destination="com.redhat.tuned" />
 		<allow receive_sender="com.redhat.tuned" />
 		<allow send_destination="com.redhat.tuned" send_interface="org.freedesktop.DBus.Introspectable" />
-		<allow send_destination="com.redhat.tuned" send_interface="com.redhat.tuned.control" send_member="active_profile" />
+		<allow send_destination="com.redhat.tuned" send_interface="com.redhat.tuned.control" />
 	</policy>
 
 	<policy user="root">
 		<allow own="com.redhat.tuned" />
-		<allow send_destination="com.redhat.tuned" />
-	</policy>
-
-	<policy at_console="true">
 		<allow send_destination="com.redhat.tuned" />
 	</policy>
 </busconfig>
