--- a/tuned.service
+++ b/tuned.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Dynamic System Tuning Daemon
 After=syslog.target systemd-sysctl.service network.target
+Requires=dbus.service polkit.service
 Conflicts=cpupower.service
 
 [Service]
