realtime: fixed kernel.sched_rt_runtime_us to be -1
kernel.sched_rt_runtime_us - a global limit on how much time realtime
scheduling may use. A run time of -1 specifies runtime == period, ie. no limit.

Resolves: rhbz#1346715

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -16,7 +16,7 @@ not_isolated_cpumask = ${f:cpulist2hex_invert:${isolated_cores}}
 [sysctl]
 kernel.hung_task_timeout_secs = 600
 kernel.nmi_watchdog = 0
-kernel.sched_rt_runtime_us = 1000000
+kernel.sched_rt_runtime_us = -1
 vm.stat_interval = 10
 kernel.timer_migration = 0
 
