realtime: added assertion to check whether isolated_cores contains present CPUs
Resolves: rhbz#1264128

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -10,6 +10,10 @@ include=realtime
 # User is responsible for adding isolated_cores=X-Y to realtime-virtual-guest-variables.conf
 include=/etc/tuned/realtime-virtual-guest-variables.conf
 isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
+isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
+
+# Fail if isolated_cores contains CPUs which are not present
+assert=${f:assertion:non present CPU(s) in isolated_cores:${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [script]
 script=script.sh
