--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -12,6 +12,11 @@ include = network-latency
 include = /etc/tuned/realtime-variables.conf
 # Non-isolated cores cpumask including offline cores
 not_isolated_cpumask = ${f:cpulist2hex_invert:${isolated_cores}}
+isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
+isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
+
+# Fail if isolated_cores contains CPUs which are not present
+assert=${f:assertion:non present CPU(s) in isolated_cores:${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [sysctl]
 kernel.hung_task_timeout_secs = 600
