--- a/profiles/realtime-virtual-host/tuned.conf
+++ b/profiles/realtime-virtual-host/tuned.conf
@@ -27,6 +27,10 @@ include=realtime
 # User is responsible for adding isolated_cores=X-Y to realtime-virtual-host-variables.conf
 include=/etc/tuned/realtime-virtual-host-variables.conf
 isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
+isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
+
+# Fail if isolated_cores contains CPUs which are not present
+assert=${f:assertion:non present CPU(s) in isolated_cores:${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [scheduler]
 # group.group_name=rule_priority:scheduler_policy:scheduler_priority:core_affinity_in_hex:process_name_regex
