--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -13,7 +13,7 @@ isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
 
 # Fail if isolated_cores contains CPUs which are not present
-assert=${f:assertion:non present CPU(s) in isolated_cores:${isolated_cores_expanded}:${isolated_cores_present_expanded}}
+assert=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [script]
 script=script.sh
