--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -16,7 +16,7 @@ isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
 
 # Fail if isolated_cores contains CPUs which are not present
-assert=${f:assertion:non present CPU(s) in isolated_cores:${isolated_cores_expanded}:${isolated_cores_present_expanded}}
+assert=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [sysctl]
 kernel.hung_task_timeout_secs = 600
