sap-hana: explicitly setting kernel.numa_balancing = 0 for better performance
Resolves: rhbz#1355768

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/sap-hana-vmware/tuned.conf
+++ b/profiles/sap-hana-vmware/tuned.conf
@@ -15,6 +15,7 @@ transparent_hugepages=never
 [sysctl]
 vm.swappiness = 30
 kernel.sem = 1250 256000 100 8192
+kernel.numa_balancing = 0
 
 [script]
 script=script.sh
