plugin_sysctl: reapply system sysctl after Tuned sysctl are applied
This can be globally controlled by the 'reapply_sysctl' setting in
tuned-main.conf. If enabled, system systcls (/etc/sysctl.conf,
/etc/sysctl.d, ...) are reapplied after Tuned sysctls are applied,
i.e. Tuned sysctls don't override system sysctls. It's load
system sysctl by executing 'sysctl --system'. It's now by default
enabled.

Resolves: rhbz#1302953

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/tuned-main.conf
+++ b/tuned-main.conf
@@ -21,3 +21,8 @@ update_interval = 10
 # available in CLI, daemon will not parse recommend.conf but will return
 # one hardcoded profile (by default "balanced").
 recommend_command = 1
+
+# Whether to reapply sysctl from the e.g /etc/sysctl.conf, /etc/sysctl.d, ...
+# If enabled these sysctls will be re-appliead after Tuned sysctls are
+# applied, i.e. Tuned sysctls will not override system sysctls.
+reapply_sysctl = 1
