--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -8,6 +8,8 @@ include=network-latency
 [variables]
 # User is responsible for updating variables.conf with variable content such as isolated_cores=X-Y
 include=/etc/tuned/cpu-partitioning-variables.conf
+# tmpdir
+tmpdir=${f:exec:/usr/bin/mktemp:-d}
 # Non-isolated cores cpumask including offline cores
 isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 isolated_cpumask=${f:cpulist2hex:${isolated_cores_expanded}}
@@ -30,11 +32,16 @@ kernel.timer_migration = 1
 /sys/devices/virtual/workqueue/cpumask = ${not_isolated_cpumask}
 /sys/devices/system/machinecheck/machinecheck*/ignore_ce = 1
 
-[script]
-script=script.sh
-
 [systemd]
 cpu_affinity=${not_isolated_cores_expanded}
 
+[script]
+priority=5
+script=script.sh
+
 [bootloader]
+priority=10
+initrd_remove_dir=True
+initrd_dst_img=tuned-initrd.img
+initrd_add_dir=${tmpdir}
 cmdline= nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores} intel_pstate=disable nosoftlockup
