--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -44,4 +44,4 @@ priority=10
 initrd_remove_dir=True
 initrd_dst_img=tuned-initrd.img
 initrd_add_dir=${tmpdir}
-cmdline= nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores} tuned.cpumask=${not_isolated_cpumask} intel_pstate=disable nosoftlockup
+cmdline= nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores} tuned.non_isolcpus=${not_isolated_cpumask} intel_pstate=disable nosoftlockup
