Use ${i:PROFILE_DIR} in our profiles
Use the new ${i:PROFILE_DIR} internal function with the 'script'
option in the profiles we ship.

Signed-off-by: Ondřej Lysoněk <olysonek@redhat.com>

--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -37,7 +37,7 @@ cpu_affinity=${not_isolated_cores_expanded}
 
 [script]
 priority=5
-script=script.sh
+script=${i:PROFILE_DIR}/script.sh
 
 [bootloader]
 priority=10
