--- a/profiles/realtime-virtual-host/tuned.conf
+++ b/profiles/realtime-virtual-host/tuned.conf
@@ -44,7 +44,7 @@ group.rcuc=0:f:3:*:rcuc.*
 group.rcub=0:f:3:*:rcub.*
 
 [script]
-script=script.sh
+script=${i:PROFILE_DIR}/script.sh
 
 [bootloader]
 cmdline=isolcpus=${isolated_cores} nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores} intel_pstate=disable nosoftlockup
