--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -38,4 +38,4 @@ kernel.timer_migration = 0
 cmdline=isolcpus=${isolated_cores} intel_pstate=disable nosoftlockup
 
 [script]
-script = script.sh
+script = ${i:PROFILE_DIR}/script.sh
