--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -16,7 +16,7 @@ isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
 assert=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [script]
-script=script.sh
+script=${i:PROFILE_DIR}/script.sh
 
 [bootloader]
 cmdline=isolcpus=${isolated_cores} nohz=on nohz_full=${isolated_cores} rcu_nocbs=${isolated_cores} intel_pstate=disable nosoftlockup
