profiles: added check for unset isolated_cores
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -8,6 +8,10 @@ include=network-latency
 [variables]
 # User is responsible for updating variables.conf with variable content such as isolated_cores=X-Y
 include=/etc/tuned/cpu-partitioning-variables.conf
+
+# Fail if isolated_cores are not set
+assert1=${f:assertion_non_equal:isolated_cores are not set:${isolated_cores}:\\${isolated_cores}}
+
 # tmpdir
 tmpdir=${f:exec:/usr/bin/mktemp:-d}
 # Non-isolated cores cpumask including offline cores
@@ -19,7 +23,7 @@ not_isolated_cores_present_expanded=${f:cpulist_present:${not_isolated_cores_exp
 not_isolated_cpumask=${f:cpulist2hex:${not_isolated_cores_expanded}}
 
 # Fail if isolated_cores contains CPUs which are not present
-assert=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
+assert2=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [sysctl]
 kernel.hung_task_timeout_secs = 600
