--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -9,11 +9,15 @@ include=realtime
 [variables]
 # User is responsible for adding isolated_cores=X-Y to realtime-virtual-guest-variables.conf
 include=/etc/tuned/realtime-virtual-guest-variables.conf
+
+# Fail if isolated_cores are not set
+assert1=${f:assertion_non_equal:isolated_cores are not set:${isolated_cores}:\\${isolated_cores}}
+
 isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
 
 # Fail if isolated_cores contains CPUs which are not present
-assert=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
+assert2=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [script]
 script=${i:PROFILE_DIR}/script.sh
