--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -12,7 +12,7 @@ include = network-latency
 include = /etc/tuned/realtime-variables.conf
 
 # Fail if isolated_cores are not set
-assert1=${f:assertion_non_equal:isolated_cores unset:${isolated_cores}:\${isolated_cores}}
+assert1=${f:assertion_non_equal:isolated_cores are not set:${isolated_cores}:\\${isolated_cores}}
 
 # Non-isolated cores cpumask including offline cores
 not_isolated_cpumask = ${f:cpulist2hex_invert:${isolated_cores}}
