--- a/profiles/realtime-virtual-host/tuned.conf
+++ b/profiles/realtime-virtual-host/tuned.conf
@@ -26,11 +26,15 @@ include=realtime
 [variables]
 # User is responsible for adding isolated_cores=X-Y to realtime-virtual-host-variables.conf
 include=/etc/tuned/realtime-virtual-host-variables.conf
+
+# Fail if isolated_cores are not set
+assert1=${f:assertion_non_equal:isolated_cores are not set:${isolated_cores}:\\${isolated_cores}}
+
 isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
 
 # Fail if isolated_cores contains CPUs which are not present
-assert=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
+assert2=${f:assertion:isolated_cores contains present CPU(s):${isolated_cores_expanded}:${isolated_cores_present_expanded}}
 
 [scheduler]
 # group.group_name=rule_priority:scheduler_policy:scheduler_priority:core_affinity_in_hex:process_name_regex
