profiles: fixed assert for unset isolated_cores
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/realtime/tuned.conf
+++ b/profiles/realtime/tuned.conf
@@ -11,8 +11,9 @@ include = network-latency
 # User is responsible for updating variables.conf with variable content such as isolated_cores=X-Y 
 include = /etc/tuned/realtime-variables.conf
 
+isolated_cores_assert_check = \\${isolated_cores}
 # Fail if isolated_cores are not set
-assert1=${f:assertion_non_equal:isolated_cores are not set:${isolated_cores}:\\${isolated_cores}}
+assert1=${f:assertion_non_equal:isolated_cores are set:${isolated_cores}:${isolated_cores_assert_check}}
 
 # Non-isolated cores cpumask including offline cores
 not_isolated_cpumask = ${f:cpulist2hex_invert:${isolated_cores}}
