--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -9,8 +9,9 @@ include=network-latency
 # User is responsible for updating variables.conf with variable content such as isolated_cores=X-Y
 include=/etc/tuned/cpu-partitioning-variables.conf
 
+isolated_cores_assert_check = \\${isolated_cores}
 # Fail if isolated_cores are not set
-assert1=${f:assertion_non_equal:isolated_cores are not set:${isolated_cores}:\\${isolated_cores}}
+assert1=${f:assertion_non_equal:isolated_cores are set:${isolated_cores}:${isolated_cores_assert_check}}
 
 # tmpdir
 tmpdir=${f:exec:/usr/bin/mktemp:-d}
