--- a/profiles/realtime-virtual-guest/tuned.conf
+++ b/profiles/realtime-virtual-guest/tuned.conf
@@ -10,8 +10,9 @@ include=realtime
 # User is responsible for adding isolated_cores=X-Y to realtime-virtual-guest-variables.conf
 include=/etc/tuned/realtime-virtual-guest-variables.conf
 
+isolated_cores_assert_check = \\${isolated_cores}
 # Fail if isolated_cores are not set
-assert1=${f:assertion_non_equal:isolated_cores are not set:${isolated_cores}:\\${isolated_cores}}
+assert1=${f:assertion_non_equal:isolated_cores are set:${isolated_cores}:${isolated_cores_assert_check}}
 
 isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 isolated_cores_present_expanded=${f:cpulist_present:${isolated_cores}}
