--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -44,9 +44,15 @@ cpu_affinity=${not_isolated_cores_expanded}
 priority=5
 script=${i:PROFILE_DIR}/script.sh
 
-[scheduler]
-isolated_cores=${isolated_cores}
-ps_blacklist=.*pmd.*;.*PMD.*;^DPDK;.*qemu-kvm.*
+# For cores isolation 'tuna' is used by default, but it cannot blacklist
+# processes. If you need process blacklisting (i.e. marking of processes
+# which can run on isolated cores) you can use 'scheduler' plugin for it
+# This is new feature, thus not enabled by default. You can enable it by
+# uncommenting the scheduler and its parameters bellow. In such case also
+# remove the two lines containing 'tuna' from from the script.sh.
+#[scheduler]
+#isolated_cores=${isolated_cores}
+#ps_blacklist=.*pmd.*;.*PMD.*;^DPDK;.*qemu-kvm.*
 
 [bootloader]
 priority=10
