builtin functions: add strip
The strip functions makes string from all arguments and
expands to its stripped version.

Also used in the cpu-partitioning profile to strip output
of the 'mktemp -d' command.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/profiles/cpu-partitioning/tuned.conf
+++ b/profiles/cpu-partitioning/tuned.conf
@@ -14,7 +14,7 @@ isolated_cores_assert_check = \\${isolated_cores}
 assert1=${f:assertion_non_equal:isolated_cores are set:${isolated_cores}:${isolated_cores_assert_check}}
 
 # tmpdir
-tmpdir=${f:exec:/usr/bin/mktemp:-d}
+tmpdir=${f:strip:${f:exec:/usr/bin/mktemp:-d}}
 # Non-isolated cores cpumask including offline cores
 isolated_cores_expanded=${f:cpulist_unpack:${isolated_cores}}
 isolated_cpumask=${f:cpulist2hex:${isolated_cores_expanded}}
